Modificacion insert mongodb

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT=4000
+
+MONGODB_URI=mongodb+srv://user_node_cafe:UzjEiNo1UlAC3SdK@clustercafe.pnxfz.mongodb.net/coffeeDB
+USER=user_node_cafe
+PASS=UzjEiNo1UlAC3SdK
